# Spacy-Integration-Tests-Eigen

./: .travis.yml  CMakeLists.txt  MockSetup.h  README.md  project.config
Eigen/: C1Operator.cpp  C2Functional.cpp  Copy.cpp  LinearExampleWithFunG.cpp  LinearOperator.cpp  LinearOperatorCreator.cpp  LinearSolver.cpp  NonlinearExampleWithFunG.cpp  Setup.h  Vector.cpp  c1Operator.cpp  c2Functional.cpp  linearOperator.cpp  linearSolver.cpp  linear_example_with_FunG.cpp  nonlinear_example_with_FunG.cpp  setup.hh  util.cpp  vector.cpp  vectorCreator.cpp
Mock/: C2Functional.cpp  LinearOperator.h  LinearSolver.cpp  ScalarProduct.h  Vector.cpp  Vector.h  c2Functional.cpp  linearOperator.cpp  norm.hh  scalarProduct.hh  vector.cpp
